--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "node ./app"
   },
   "dependencies": {
+    "@claviska/jquery-minicolors": "^2.2.6",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "evol-colorpicker": "^3.3.1",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "jade": "~1.11.0",
     "mongoose": "^4.11.6",
+    "mongoose-unique-validator": "^1.0.6",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.1.0",
     "serve-favicon": "~2.4.2",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "spectrum-colorpicker": "^1.8.0"
   }
 }
