--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.11.6",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "~1.8.1",
+    "node-spotify-api": "^1.0.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.1.0",
