--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "deezer-node-api": "^0.2.2",
     "evol-colorpicker": "^3.3.1",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
